--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,23 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".home">
+
+
+  <TextView
+      android:id="@+id/tvJual"
+      android:layout_width="227dp"
+      android:layout_height="40dp"
+      android:layout_marginTop="52dp"
+      android:text="Penjualan Buku"
+      android:textAlignment="center"
+      android:textColor="@color/purple_700"
+      android:textSize="24sp"
+      android:textStyle="bold"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
+  <ProgressBar
+       android:id="@+id/progres"
+       style="?android:attr/progressBarStyleHorizontal"
+        android:indeterminateBehavior="cycle"
+      android:visibility="gone"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"/>
 
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/movieLists"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_margin="5dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintHorizontal_bias="0.013"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.029" />
+      />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
