--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,14 +8,16 @@
 
     <ImageView
         android:id="@+id/imageViewLogo"
-        android:layout_width="129dp"
-        android:layout_height="122dp"
+        android:layout_width="153dp"
+        android:layout_height="126dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="54dp"
-        android:layout_marginBottom="32dp"
-        android:src="@drawable/img_3"
-        android:contentDescription="@string/TODO" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="118dp"
+        android:layout_marginTop="61dp"
+        android:layout_marginEnd="124dp"
+        android:contentDescription="@string/TODO"
+        android:src="@drawable/img_3" />
 
     <TextView
         android:id="@+id/textViewTitle"
@@ -31,30 +33,20 @@
         android:textSize="30sp" />
 
     <EditText
-        android:id="@+id/etUsername"
-        android:layout_width="match_parent"
+        android:id="@+id/editEmail"
+        android:layout_width="379dp"
         android:layout_height="wrap_content"
-        android:hint="@string/username"
-        android:drawablePadding="12dp"
-        android:drawableStart="@drawable/baseline_person_24"
-        android:textSize="20sp"
         android:layout_below="@id/textViewTitle"
-        android:layout_marginTop="16dp"/>
-
-    <EditText
-        android:id="@+id/etEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/Email"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:drawableStart="@drawable/baseline_email_24"
         android:drawablePadding="12dp"
-        android:textSize="20sp"
+        android:hint="@string/Email"
         android:inputType="textEmailAddress"
-        android:layout_below="@id/etUsername"
-        android:layout_marginTop="16dp"/>
+        android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/etPassword"
+        android:id="@+id/editPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/Password"
@@ -62,8 +54,21 @@
         android:drawablePadding="12dp"
         android:drawableStart="@drawable/baseline_lock_24"
         android:inputType="textPassword"
-        android:layout_below="@id/etEmail"
+        android:layout_below="@id/editEmail"
         android:layout_marginTop="16dp"/>
+
+    <EditText
+        android:id="@+id/etPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/confirm_password"
+        android:textSize="20sp"
+        android:drawablePadding="12dp"
+        android:drawableStart="@drawable/baseline_password_24"
+        android:inputType="textPassword"
+        android:layout_below="@id/editPassword"
+        android:layout_marginTop="16dp"/>
+
 
     <Button
         android:id="@+id/btnRegister"
@@ -72,6 +77,32 @@
         android:text="@string/register"
         android:layout_below="@id/etPassword"
         android:layout_marginTop="24dp"/>
+
+    <TextView
+        android:id="@+id/tvLogin"
+        android:layout_width="121dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnRegister"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="24dp"
+        android:gravity="center"
+        android:text="Login"
+        android:textColor="@color/purple_700"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvPunya"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="520dp"
+        android:layout_marginEnd="-244dp"
+        android:layout_toStartOf="@+id/btnRegister"
+        android:text="@string/sudah_punya_akun"
+        android:textSize="20sp" />
 
 </RelativeLayout>
 </layout>
