--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,7 +2,10 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    app:cardCornerRadius="20dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,29 +18,33 @@
             android:layout_height="115dp"
             android:layout_marginEnd="16dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/img_9"
+            android:src="@drawable/img_10"
             android:contentDescription="@string/todo" />
 
         <TextView
             android:id="@+id/Buku"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="242dp"
+            android:layout_height="54dp"
             android:layout_alignTop="@id/image"
-            android:layout_marginStart="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
             android:layout_toEndOf="@id/image"
             android:text="@string/nama_buku"
             android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/Harga"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="227dp"
+            android:layout_height="57dp"
             android:layout_below="@id/Buku"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="26dp"
-            android:layout_marginTop="19dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginEnd="0dp"
             android:layout_toEndOf="@id/image"
             android:text="@string/harga_buku"
             android:textColor="@color/black"
