--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -54,6 +54,20 @@
         android:inputType="textPassword"
         android:textSize="20sp" />
 
+    <TextView
+        android:id="@+id/tvDaftar"
+        android:layout_width="83dp"
+        android:layout_height="35dp"
+        android:layout_below="@id/btnLogin"
+        android:layout_marginStart="220dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="6dp"
+        android:gravity="center"
+        android:text="Register"
+        android:textColor="@color/purple_700"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
@@ -64,34 +78,27 @@
         android:text="@string/Login" />
 
     <TextView
-        android:id="@+id/tvForgotPassword"
-        android:layout_width="254dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/tvSandi"
+        android:layout_width="179dp"
+        android:layout_height="41dp"
         android:layout_below="@id/btnLogin"
-        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="78dp"
-        android:layout_marginTop="37dp"
-        android:layout_marginEnd="95dp"
+        android:layout_marginTop="-118dp"
+        android:layout_marginEnd="40dp"
         android:gravity="center"
-        android:text="@string/forgot_password"
+        android:text="@string/lupa"
         android:textColor="@color/purple_700"
+        android:textSize="15sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/tvSignUp"
-        android:layout_width="331dp"
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvForgotPassword"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="50dp"
-        android:text="@string/don_t_have_an_account_sign_up"
-        android:textAlignment="center"
-        android:textColor="@color/purple_700"
-        android:textStyle="bold" />
+        android:layout_marginTop="490dp"
+        android:layout_marginLeft="20dp"
+        android:text="@string/belum_punya_akun"
+        android:textSize="20sp" />
 
 </RelativeLayout>
 </layout>
